# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-pda/gpixpod/Attic/ChangeLog,v 1.1 2006/12/21 03:42:49 tester Exp $

*gpixpod-0.6.2 (21 Dec 2006)

  21 Dec 2006; Olivier Crête <tester@gentoo.org> +metadata.xml,
  +gpixpod-0.6.2.ebuild:
  Initial commit, thanks to the work done on bug #121744, based largely on
  ebuild by Emiliano Vavassori
