@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST gpixpod-0.6.2.tar.gz 174167 RMD160 b3119862f4d46721751cf9cc56725344cf4cb4a6 SHA1 56adebec3640422015c7b0b3f81b85c056636188 SHA256 79fcfb29cbfa618d47ba608bb325df86e5501c165ba5e33fea0d79a1cc5ee056
-EBUILD gpixpod-0.6.2.ebuild 956 RMD160 9c343a47d81762557930dd07f024826a3a24bce4 SHA1 f824dcee511f8ab6748841f85b9a64e3177310da SHA256 e5f4ee14cb011a59b04b56edec65eea82620df82473a975bc42801a088b903ad
-MD5 a3dc69818618932ae637caa42d3fdb75 gpixpod-0.6.2.ebuild 956
-RMD160 9c343a47d81762557930dd07f024826a3a24bce4 gpixpod-0.6.2.ebuild 956
-SHA256 e5f4ee14cb011a59b04b56edec65eea82620df82473a975bc42801a088b903ad gpixpod-0.6.2.ebuild 956
-MISC ChangeLog 440 RMD160 10db2d3624ea25e066fb8851de37070aaefc8d94 SHA1 7b18125208d65e64ad3ea04f0b716b2849e8f47f SHA256 50a122b04fc69e42a373956efc7d65b0c6bee5f4a8395141447429ff1197541a
-MD5 c8f166676a5d1c596b50c7f724f88291 ChangeLog 440
-RMD160 10db2d3624ea25e066fb8851de37070aaefc8d94 ChangeLog 440
-SHA256 50a122b04fc69e42a373956efc7d65b0c6bee5f4a8395141447429ff1197541a ChangeLog 440
+EBUILD gpixpod-0.6.2.ebuild 1009 RMD160 7e48397d33aac3c2b5185d0b0381565645799790 SHA1 ac81531a6a1cf7ff50463374f238c88b488a999a SHA256 8da830dbb95a489fa9a687806657c7c76d12f98c33f8e4f20451a0227adfa674
+MD5 f26edb93c727dd7601914160d55dd5db gpixpod-0.6.2.ebuild 1009
+RMD160 7e48397d33aac3c2b5185d0b0381565645799790 gpixpod-0.6.2.ebuild 1009
+SHA256 8da830dbb95a489fa9a687806657c7c76d12f98c33f8e4f20451a0227adfa674 gpixpod-0.6.2.ebuild 1009
+MISC ChangeLog 546 RMD160 c333f4d106b603d5701e1697e83b6e75d0caf60f SHA1 9b3f80d4fe4b06957eae925640f7dfd710a7d660 SHA256 5ffd784893b0a48b2e64fc81e4eabeacfe67f49113a15c0a7353301a21a2f20c
+MD5 5e5d6dfdf12e9c62d42ad48c301b5cda ChangeLog 546
+RMD160 c333f4d106b603d5701e1697e83b6e75d0caf60f ChangeLog 546
+SHA256 5ffd784893b0a48b2e64fc81e4eabeacfe67f49113a15c0a7353301a21a2f20c ChangeLog 546
 MISC metadata.xml 218 RMD160 dcf0864821f82cd4da3e0da4d518166f6045b7b5 SHA1 ca615ae28fbffc0e7e3d1e51e189fbd245fddcc4 SHA256 983941334731e33b40df7a8643ee1f0e415ff4a4e2c90e1a4ac80a852792fb47
 MD5 d134690c47d781b73eb55460f3b7f496 metadata.xml 218
 RMD160 dcf0864821f82cd4da3e0da4d518166f6045b7b5 metadata.xml 218
@@ -20,7 +20,7 @@ SHA256 6b83efc6918b05b2ced421c23b7a11eda2fa8850951b51d4345341f9e4177640 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFigLw+IXOQtHLm/gRAvTXAJ4mfW0ZpRzETdBMFbs+6SHwL9rctgCfUSv2
-KS9KEF6TRtcmhBq/LuyYTqs=
-=DK7f
+iD8DBQFFigto+IXOQtHLm/gRAtTzAJ0eSRm13Ifs1jhUOWx6Zv43KzpEagCeMzM5
++vDGPZzsvqDNML4nzYnn2J8=
+=N5vA
 -----END PGP SIGNATURE-----
