@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gpixpod/Attic/gpixpod-0.6.2.ebuild,v 1.1 2006/12/21 03:42:49 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gpixpod/Attic/gpixpod-0.6.2.ebuild,v 1.2 2006/12/21 04:19:18 tester Exp $
 
 inherit distutils
 
@@ -33,4 +33,7 @@ src_install() {
 
 	mv ${D}/usr/lib/gpixpod/* ${D}/usr/share/gpixpod
 	rmdir {D}/usr/lib/gpixpod
+
+	rm -rf ${D}/usr/share/doc/gpixpod
+	dodoc KNOWNBUGS
 }
