@@ -1,6 +1,9 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gpixpod/Attic/ChangeLog,v 1.1 2006/12/21 03:42:49 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gpixpod/Attic/ChangeLog,v 1.2 2006/12/21 04:19:18 tester Exp $
+
+  21 Dec 2006; Olivier Crête <tester@gentoo.org> gpixpod-0.6.2.ebuild:
+  Put all docs in the same place
 
 *gpixpod-0.6.2 (21 Dec 2006)
 
